fix overflow bug

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,7 +1,7 @@
 html {
   scroll-behavior: smooth;
   user-select: none;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
